test/src/errors/CalculatorDivideByZeroException.java
package errors;

public class CalculatorDivideByZeroException {

    public CalculatorDivideByZeroException(String message) {
        System.out.println("Error: " + message);
    }
}
